force-app/main/default/objects/Notification__c/fields/BCC__c.field-meta.xml
<CustomField>
    <fullName>BCC__c</fullName>
    <label>BCC</label>
    <length>200</length>
    <type>Text</type>
</CustomField>