force-app/main/default/objects/Notification__c/fields/CC__c.field-meta.xml
<CustomField>
    <fullName>CC__c</fullName>
    <label>CC</label>
    <length>200</length>
    <type>Text</type>
</CustomField>