force-app/main/default/objects/Notification__c/fields/Failure_Count__c.field-meta.xml
<CustomField>
    <fullName>Failure_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Failure Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>