force-app/main/default/objects/Notification__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>