force-app/main/default/objects/Notification__c/fields/Variables__c.field-meta.xml
<CustomField>
    <fullName>Variables__c</fullName>
    <label>Variables</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>