force-app/main/default/objects/Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Template__c</columns>
    <columns>To__c</columns>
    <columns>Status__c</columns>
    <columns>Failure_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>